k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: k8s-test-pod
  labels:
    app: k8s-test
spec:
  containers:
    - name: k8s-test-pod-app
      image: csuvikg/tap-k8s-test:1.0
      ports:
        - name: app
          containerPort: 8080
      readinessProbe:
        httpGet:
          port: app
          path: /actuator/health/readiness
        failureThreshold: 1
        initialDelaySeconds: 5
        periodSeconds: 10
      livenessProbe:
        httpGet:
          port: app
          path: /actuator/health/liveness
        failureThreshold: 1
        initialDelaySeconds: 5
        periodSeconds: 10
